# logsimply

./: LICENSE  README.md  pyproject.toml
src/logsimply/: __init__.py  __main__.py  logger.py
